@@ -119,7 +119,12 @@ def _process_equation(value, fmt):
     # Update the current section number
     if attrs['secno'] != cursec:  # The section number changed
         cursec = attrs['secno']   # Update the global section tracker
-        Ntargets = 1              # Resets the global targets counter
+        if numbersections:
+            Ntargets = 0          # Resets the global targets counter
+
+    # Increment the targets counter
+    if 'tag' not in attrs:
+        Ntargets += 1
 
     # Pandoc's --number-sections supports section numbering latex/pdf, html,
     # epub, and docx
@@ -130,7 +135,6 @@ def _process_equation(value, fmt):
         if fmt in ['html', 'html5', 'epub', 'epub2', 'epub3', 'docx'] and \
           'tag' not in attrs:
             attrs['tag'] = str(cursec+secoffset) + '.' + str(Ntargets)
-            Ntargets += 1
 
     # Save reference information
     eq['is_tagged'] = 'tag' in attrs
@@ -145,7 +149,6 @@ def _process_equation(value, fmt):
     else:
         targets[attrs.id] = pandocxnos.Target(Ntargets, cursec,
                                               attrs.id in targets)
-        Ntargets += 1  # Increment the global targets counter
 
     return eq
 
