@@ -1,6 +1,8 @@
 pandoc-eqnos 2.2.0 (unreleased)
 
     * Updated to work with pandoc 2.10.
+    * Fixed equation number reset problem for html, docx
+      (pandoc-xnos Issue #15).
 
 
 pandoc-eqnos 2.1.1 (2019-09-26)
